# parallel_programming

./: README.md  Zadania_po_laboratornym_rabotam_po_kursu_PP_2024.docx
lab_1/: .gitignore  README.md
lab_1/c++/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
lab_1/python/: checker.py  config.json  graph.py
lab_2/c++/: CMakeLists.txt  main.cpp  matrix.cpp
lab_2/python/: checker.py  config.json  graph.py
lab_3/c++/: main.cpp  matrix.cpp  run.sh
lab_3/matrix_SK/: 1 potok.txt  16 potok.txt  2 potok.txt  20 potok.txt  4 potok.txt  8 potok.txt
lab_3/python/: checker.py  config.json  graph.py
lab_3/super pc SK/: matrix_mpi  run.pbs  super_pc.cpp
lab_4/c++/: main.cpp  matrix.cpp  matrix.h
lab_4/cuda/: cuda_multiply.cu  cuda_multiply.h
lab_4/python/: checker.py  config.json  graph.py
